Fix podman build command by adding --systemd flag

--- a/.github/workflows/acore-sdk-workflow.yml
+++ b/.github/workflows/acore-sdk-workflow.yml
@@ -34,7 +34,8 @@ jobs:
 
       - name: Build image with Buildah
         run: |
-          podman build -t ${{ env.IMAGE_NAME }}:build . --runtime=runc --cgroup-manager=cgroupfs
+          podman build -t ${{ env.IMAGE_NAME }}:build .--systemd=false --cgroup-manager=cgroupfs
+
 
       - name: Trivy scan 
         run: |
