--- a/.github/workflows/sdv-sdk-workflow.yml
+++ b/.github/workflows/sdv-sdk-workflow.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Build
         uses: docker/build-push-action@v6
         with:
+          network: host
           file: ./Containerfile
           load: true
           tags: ${{ env.IMAGE_NAME }}:test
