Add write permission for packages in workflow

--- a/.github/workflows/sdv-sdk-workflow.yml
+++ b/.github/workflows/sdv-sdk-workflow.yml
@@ -121,6 +121,7 @@ jobs:
     timeout-minutes: 60
     permissions:
       contents: read
+      packages: write
     steps:
       - name: Checkout
         uses: actions/checkout@v5
